--- a/LEAmountInputViewDemo/Base.lproj/Main.storyboard
+++ b/LEAmountInputViewDemo/Base.lproj/Main.storyboard
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7703" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6711"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,13 +18,73 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="qbF-aZ-O81">
+                                <rect key="frame" x="14" y="34" width="347" height="29"/>
+                                <segments>
+                                    <segment title="Currency"/>
+                                    <segment title="Percentage"/>
+                                    <segment title="Fraction Quantity"/>
+                                </segments>
+                                <connections>
+                                    <action selector="amounTextFieldTypeChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="D96-P7-Yoa"/>
+                                </connections>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zWy-QH-Gdx">
+                                <rect key="frame" x="16" y="154" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0.0" textAlignment="right" adjustsFontSizeToFit="NO" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="lXz-PJ-Ppe" customClass="KVAmountInputTextField">
+                                <rect key="frame" x="16" y="76" width="343" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="5q0-rD-kAJ"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="30"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="uW0-zZ-qti">
+                                <rect key="frame" x="310" y="173" width="51" height="31"/>
+                                <connections>
+                                    <action selector="resetToZero:" destination="BYZ-38-t0r" eventType="valueChanged" id="O9p-WQ-CXb"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Reset to ZERO" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xkv-fN-Eu2">
+                                <rect key="frame" x="182" y="178" width="116" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="lXz-PJ-Ppe" secondAttribute="trailing" constant="16" id="9Ng-Nc-qDu"/>
+                            <constraint firstItem="lXz-PJ-Ppe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="FHJ-bD-fZd"/>
+                            <constraint firstItem="uW0-zZ-qti" firstAttribute="leading" secondItem="xkv-fN-Eu2" secondAttribute="trailing" constant="12" id="K6g-e2-IPA"/>
+                            <constraint firstAttribute="trailing" secondItem="qbF-aZ-O81" secondAttribute="trailing" constant="14" id="LcX-sf-sAO"/>
+                            <constraint firstItem="zWy-QH-Gdx" firstAttribute="leading" secondItem="lXz-PJ-Ppe" secondAttribute="leading" id="Qeh-UI-vd7"/>
+                            <constraint firstItem="uW0-zZ-qti" firstAttribute="trailing" secondItem="lXz-PJ-Ppe" secondAttribute="trailing" id="Wgv-Jj-AUG"/>
+                            <constraint firstItem="lXz-PJ-Ppe" firstAttribute="top" secondItem="qbF-aZ-O81" secondAttribute="bottom" constant="14" id="b3n-yU-yrO"/>
+                            <constraint firstItem="uW0-zZ-qti" firstAttribute="top" secondItem="lXz-PJ-Ppe" secondAttribute="bottom" constant="27" id="bJ1-9C-wiv"/>
+                            <constraint firstItem="qbF-aZ-O81" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="14" id="drY-kj-6CE"/>
+                            <constraint firstItem="qbF-aZ-O81" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="14" id="oAQ-5x-hbw"/>
+                            <constraint firstItem="xkv-fN-Eu2" firstAttribute="centerY" secondItem="uW0-zZ-qti" secondAttribute="centerY" id="rcf-xz-yo9"/>
+                            <constraint firstItem="zWy-QH-Gdx" firstAttribute="top" secondItem="lXz-PJ-Ppe" secondAttribute="bottom" constant="8" id="seP-O5-skr"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="kvAmountTextField" destination="lXz-PJ-Ppe" id="7UZ-go-f8u"/>
+                        <outlet property="resetToZeroLabel" destination="xkv-fN-Eu2" id="D5u-kd-2Oi"/>
+                        <outlet property="typeSegment" destination="qbF-aZ-O81" id="KfC-DS-3Y5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="24.800000000000001" y="35.532233883058474"/>
         </scene>
     </scenes>
 </document>
